<resources>
    <string name="app_name">Pulavey</string>
    <string name="text_finish">Finish</string>
    <string name="text_next">Next</string>
    <string name="text_response">Response</string>
    <string name="text_radio_button_1">Radio Button 1</string>
    <string name="text_radio_button_2">Radio Button 2</string>
    <string name="text_radio_button_3">Radio Button 3</string>
    <string name="text_loading">Loading</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>