<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_question"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="?attr/textAppearanceSubtitle1"
        tools:text="What's your name"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_response"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintWidth_percent=".9"
        android:id="@+id/til_response"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/tv_question"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tiet_response"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/tv_question">
        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_radio_button_1"/>

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_radio_button_2"/>

        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_radio_button_3"/>
    </RadioGroup>

<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintGuide_percent=".9"-->
<!--        android:id="@+id/guideline"/>-->

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/text_next"
        android:id="@+id/btn_next"
        app:layout_constraintWidth_percent=".90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"/>
<!--        app:layout_constraintTop_toBottomOf="@id/guideline"/>-->

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/text_finish"
        android:visibility="gone"
        app:layout_constraintWidth_percent=".90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:id="@+id/btn_finish"/>
<!--        app:layout_constraintTop_toBottomOf="@id/guideline"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>